--- a/src/views/chat.pug
+++ b/src/views/chat.pug
@@ -12,13 +12,18 @@ html(lang="en")
         main
             div#welcome
                 form
-                    input(placeholder="방이름", required, type="text")
+                    input(placeholder="방 이름", required, type="text")
                     button 방 입장
-            div#call
-                div#myStream
-                    video#myFace(autoplay,playsinline,width=400,height=400)
-                    button#mute 음소거
-                    button#camera 카메라 OFF
-                    select#cameras
+                h4 방 목록    
+                ul
+            div#room
+                h3
+                form#nick
+                    input(placeholder="닉네임 입력", required, type="text")
+                    button 전송
+                ul
+                form#msg
+                    input(placeholder="할말 입력", required, type="text")
+                    button 전송
         script(src="/socket.io/socket.io.js") 
         script(src="/public/js/app.js") 
